--- a/services/pom.xml
+++ b/services/pom.xml
@@ -87,6 +87,16 @@
 					</jvmArguments> </configuration -->
 			</plugin>
 			<plugin>
+				<groupId>org.pitest</groupId>
+				<artifactId>pitest-maven</artifactId>
+				<version>1.2.2</version>
+				<configuration>
+					<outputFormats>
+						<outputFormat>XML</outputFormat>
+					</outputFormats>
+				</configuration>
+			</plugin>
+			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>cobertura-maven-plugin</artifactId>
 				<version>2.7</version>
