--- a/services/pom.xml
+++ b/services/pom.xml
@@ -87,12 +87,18 @@
 					</jvmArguments> </configuration -->
 			</plugin>
 			<plugin>
+				<groupId>org.sonarsource.scanner.maven</groupId>
+				<artifactId>sonar-maven-plugin</artifactId>
+				<version>3.2</version>
+			</plugin>
+			<plugin>
 				<groupId>org.pitest</groupId>
 				<artifactId>pitest-maven</artifactId>
 				<version>1.2.2</version>
 				<configuration>
 					<outputFormats>
 						<outputFormat>XML</outputFormat>
+						<outputFormat>HTML</outputFormat>
 					</outputFormats>
 				</configuration>
 			</plugin>
