--- a/services/src/main/resources/application.yml
+++ b/services/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:mysql://${RDS_HOSTNAME}:${RDS_PORT}/${RDS_DB_NAME}
-    username: ${RDS_USERNAME}
-    password: ${RDS_PASSWORD}
+    url: jdbc:mysql://localhost:3306/capsule
+    username: root
+    password: password
     driver-class-name: com.mysql.jdbc.Driver
     
   jpa:
