--- a/services/src/main/resources/application.yml
+++ b/services/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/capsule
-    username: root
-    password: password
+    url: jdbc:mysql://${RDS_HOST}:${RDS_PORT}/${RDS_DB}
+    username: ${RDS_USER}
+    password: ${RDS_PASSWORD}
     driver-class-name: com.mysql.jdbc.Driver
     
   jpa:
