--- a/Dockerfile_centos
+++ b/Dockerfile_centos
@@ -1,17 +1,14 @@
-FROM --platform=linux/amd64 amazoncorretto:8
+FROM centos
 MAINTAINER Puneet Sachdev (puneet.sachdev@gmail.com)
 
-ENV RDS_HOST=127.0.0.1
-ENV RDS_PORT=3306
-ENV RDS_DB=devcapsule
-ENV RDS_USER=root
-ENV RDS_PASSWORD=password
+#Install Java 
+RUN yum install -y java 
 
 #Copy the application jar file 
 ADD /services/target/devcapsule-spring-1.0.jar myapp.jar 
-ADD /entrypoint.sh entrypoint.sh
-RUN chmod +x entrypoint.sh
-
+ADD /entrypoint.sh entrypoint.sh 
+RUN chmod +x entrypoint.sh 
 RUN sh -c 'touch /myapp.jar'
+RUN sh -c 'touch /entrypoint.sh'
 
 ENTRYPOINT ["sh", "-c", "/entrypoint.sh"]
