--- a/services/src/main/resources/application.yml
+++ b/services/src/main/resources/application.yml
@@ -8,6 +8,7 @@ spring:
   jpa:
     generate-ddl: true
     show-sql: true
+    database-platform: org.hibernate.dialect.MySQLDialect
     
   main:
     banner-mode: "off"
